Fixed tile grid positioning on mobile

--- a/src/components/Tiles/Tiles.scss
+++ b/src/components/Tiles/Tiles.scss
@@ -9,24 +9,35 @@
   }
 
   .content {
-    display: block;
+    display: grid;
+    grid-gap: 24px;
+    padding: 24px;
+
 
     @include breakpoint($sm) {
-      display: grid;
+      padding: 40px 0;
+      grid-columns: repeat(2, 1fr);
+    }
+
+    @include breakpoint($md) {
       grid-template-columns: repeat(3, 1fr);
-      grid-gap: 24px;
     }
   }
 
   .tile {
     background: $color-white;
     border-radius: 4px;
-    margin: 40px 0;
     padding: 32px 32px 40px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 
     h3 {
       margin-bottom: 32px;
+    }
+
+    @include breakpoint($sm-only) {
+      &:first-child {
+        grid-column: 1 / 3;
+      }
     }
   }
 }
